--- a/package.json
+++ b/package.json
@@ -3,16 +3,30 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "parcel serve index.html",
-    "watch": "parcel watch index.html"
+    "build": "webpack --env mode=production",
+    "start": "webpack serve"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.13.2",
-    "parcel": "^2.13.2",
-    "parcel-bundler": "^1.12.5",
-    "sass": "^1.83.0"
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "babel-loader": "^9.2.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "mini-css-extract-plugin": "^2.9.2",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
+    "style-loader": "^4.0.0",
+    "stylelint": "^16.12.0",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-order": "^6.0.4",
+    "terser-webpack-plugin": "^5.3.11",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
